1.working on mobile responsive screen sizing issue...

--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -21,6 +21,11 @@
   width: min(100%, var(--nav-max-width, 108rem));
   justify-content: flex-end;
 }
+@media screen and (max-width: 1194px) {
+ .footer{
+  padding: 0 calc(var(--vertical-large-padding, 3.125rem)/2) var(--menu-button-margin-right);
+ }
+}
 
 @media screen and (max-width: 1024px) {
   .footer {
