--- a/src/components/nav/nav.module.css
+++ b/src/components/nav/nav.module.css
@@ -120,8 +120,8 @@
     position: fixed;
     inset: 0;
     margin: 0;
-    padding: 6rem var(--vertical-large-padding) 3rem var(--vertical-large-padding);
-    width: 100vw;
+    /* padding: 6rem var(--vertical-large-padding) 3rem var(--vertical-large-padding); */
+    width: 100%;
     height: 100vh;
     display: flex;
     flex-direction: column;
@@ -168,3 +168,5 @@
     text-align: center;
   }
 }
+
+
