--- a/src/components/wrapper/wrapper.module.css
+++ b/src/components/wrapper/wrapper.module.css
@@ -8,9 +8,14 @@
     display: block;
 }
 
-@media (max-width: 80rem) { /* 1280px */
+@media (max-width: 80rem) { /* 1280px and down */
   .wrapper {
-    padding: 0 calc(var(--vertical-large-padding) * 2);
+    padding: 0 calc(var(--vertical-large-padding) * 0.75);
   }
 }
 
+@media (max-width: 48rem) { /* 768px and down */
+  .wrapper {
+    padding: 0 calc(var(--vertical-large-padding) / 2);
+  }
+}
