--- a/src/index.css
+++ b/src/index.css
@@ -55,8 +55,6 @@
   --font-size-2: 2.25rem;
   --font-size-4: 2rem;
   --small-card-title-font-size:0.75rem;
-  /* --small-card-max-width:calc(146.256px * 0.9);
-  --small-card-max-height:calc(195px * 0.9); */
   --small-card-max-width:131.63px;
   --small-card-max-height:175.5px;
   --nav-min-height: 5rem;
@@ -93,24 +91,36 @@
 *::before,
 *::after {
   box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
 body {
   margin: 0;
+  padding: 0;
   min-height: 100vh;
   background-color: var(--background-dark, #1f1f1f);
   color: var(--text-dark, #d4d4d4);
   font-family: var(--font-family-supreme, 'Supreme');
   overflow-y: auto;
+  overflow-x: hidden;
   scrollbar-width: none;
   -ms-overflow-style: none;
   -webkit-overflow-scrolling: touch;
 }
 
 html {
+  width: 100%;
+  min-width: 100%;
   scroll-behavior: smooth;
   scrollbar-width: none;
   -ms-overflow-style: none;
+}
+
+#root {
+  width: 100%;
+  min-width: 100%;
+  min-height: 100vh;
 }
 
 html::-webkit-scrollbar {
@@ -202,4 +212,25 @@ button{
   line-height: normal;
   letter-spacing: 0.15rem;
   text-transform: uppercase;
+}
+
+
+@media screen and (max-width: 1194px) {
+  :root {
+    --content-width: 100%; 
+    --max-box-width: 100%;
+    --nav-max-width: 100%;
+    --vertical-large-padding: 1.5rem;
+  }
+  
+}
+
+@media screen and (max-width: 48rem) {
+  :root {
+    --content-width: 100%;
+    --max-box-width: 100%;
+    --nav-max-width: 100%;
+    --vertical-large-padding: 1.25rem;
+    --base-gap: 2rem;
+  }
 }
