--- a/src/screens/home/home.module.css
+++ b/src/screens/home/home.module.css
@@ -1,17 +1,23 @@
 .heroPage {
   width: 100%;
+  min-width: 100%;
+  max-width: 100vw;
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
+ 
 }
 
 .heroMain {
   width: 100%;
+  min-width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  padding: 0;
+  margin: 0;
 }
 
 .herotext{
@@ -25,7 +31,9 @@
 
 .heroContent {
   width: 100%;
-  min-height: 100vh;
+  min-width: 100%;
+  max-width: 100vw;
+  min-height: 100vh; 
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -58,9 +66,8 @@
 
 .heroUtilityRow {
   display: flex;
-  width: var(--max-box-width, 600px);
-  min-width: var(--max-box-width, 600px);
-  /* margin-top: calc(var(--base-gap)/2); */
+  width: min(100%, var(--max-box-width, 700px));
+  margin-top: calc(var(--base-gap)/2);
   padding: var(--base-gap) 10px var(--base-gap) 0;
   justify-content: start;
   gap: var(--base-gap);
@@ -70,6 +77,11 @@
 
 @media (max-width: 48rem) {
   .heroPage {
-    padding: var(--base-gap);
+    padding: 0 calc(var(--vertical-large-padding) / 2);
+  }
+
+  .heroContent {
+    width: 100vw;
+    min-width: 100vw;
   }
 }
