--- a/src/screens/projects/projects.module.css
+++ b/src/screens/projects/projects.module.css
@@ -1,8 +1,10 @@
 .section {
+  width: 100%;
   min-height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
+  background-color: black;
 }
 
 .content {
